--- a/MyFantasyWebsite/index.html
+++ b/MyFantasyWebsite/index.html
@@ -934,8 +934,8 @@ Keep it under 150 words - I need quick actionable advice!`;
                                 <td class="p-3 text-center">${p.bye_week || '-'}</td>
                                 <td class="p-3 text-center space-x-1">
                                     <button data-player-id="${p.id}" class="analyze-btn bg-slate-200 text-slate-700 text-xs font-semibold py-1 px-2 rounded hover:bg-amber-200 transition-colors">📊</button>
-                                    <button data-player-id="${p.id}" class="draft-btn bg-emerald-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-emerald-600">✓</button>
-                                    <button data-player-id="${p.id}" class="my-draft-btn bg-blue-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-blue-600">MY</button>
+                                    <button data-player-id="${p.id}" class="draft-btn bg-red-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-red-600">✗</button>
+                                    <button data-player-id="${p.id}" class="my-draft-btn bg-green-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-green-600">MY</button>
                                 </td>
                             </tr>
                         `).join('')}
@@ -1279,8 +1279,8 @@ Keep it concise - I need quick actionable advice!`;
                                 <td class="p-3 text-center">${p.bye_week || '-'}</td>
                                 <td class="p-3 text-center space-x-1">
                                     <button data-player-id="${p.id}" class="analyze-btn bg-slate-200 text-slate-700 text-xs font-semibold py-1 px-2 rounded hover:bg-amber-200 transition-colors">📊</button>
-                                    <button data-player-id="${p.id}" class="draft-btn bg-emerald-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-emerald-600">✓</button>
-                                    <button data-player-id="${p.id}" class="my-draft-btn bg-blue-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-blue-600">MY</button>
+                                    <button data-player-id="${p.id}" class="draft-btn bg-red-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-red-600">✗</button>
+                                    <button data-player-id="${p.id}" class="my-draft-btn bg-green-500 text-white text-xs font-semibold py-1 px-2 rounded hover:bg-green-600">MY</button>
                                 </td>
                             </tr>
                         `).join('')}
