--- a/MyFantasyWebsite/index.html
+++ b/MyFantasyWebsite/index.html
@@ -196,6 +196,7 @@
         <header class="text-center mb-6 md:mb-8">
             <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold text-slate-900 leading-tight">2025 Fantasy Football AI Dashboard</h1>
             <p class="text-slate-600 mt-2 text-sm md:text-lg px-4">Your interactive guide to dominating your Superflex & IDP league.</p>
+            <p2 class ="text-slate-600 mt-2 text-sm md:text-lg px-4"> Brought to you by Kai Holland!</p2>
         </header>
 
         <nav class="flex flex-wrap justify-center mb-8 bg-slate-200 rounded-lg p-2 shadow-inner gap-1">
